@@ -14,6 +14,7 @@ protected:
   HepMC::IO_GenEvent* asciiInput;
 
   G4int verbose;
+  G4int firstEvent;
   HepMCG4AsciiReaderMessenger* messenger;
 
   // Note that the life of HepMC event object must be handled by users.
@@ -43,8 +44,14 @@ public:
   void SetVerboseLevel(G4int i);
   G4int GetVerboseLevel() const; 
 
+  void SetFirstEvent(G4int ev);
+  G4int GetFirstEvent() const;
+
   // methods...
   void Initialize();
+
+  // scan through the file until firstEvent
+  void GotoFirstEvent();
 
   // The default behavior is that a single HepMC event generated by
   // GenerateHepMCEvent() will be converted to G4Event through HepMC2G4().
@@ -75,6 +82,16 @@ inline void HepMCG4AsciiReader::SetVerboseLevel(G4int i)
 inline G4int HepMCG4AsciiReader::GetVerboseLevel() const
 {
   return verbose;
+}
+
+inline G4int HepMCG4AsciiReader::GetFirstEvent() const
+{
+  return firstEvent;
+}
+
+inline void HepMCG4AsciiReader::SetFirstEvent(G4int ev)
+{
+  firstEvent = ev;
 }
 
 #endif
